setup-scripts/67-vaultwarden/passwordsafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: vaultwarden
  name: passwordsafe-ingress
  namespace: vaultwarden
spec:
  ingressClassName: nginx
  rules:
  - host: passwordsafe.calcbox.de
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - passwordsafe.calcbox.de
    secretName: passwordsafe-tls
