setup-scripts/67-vaultwarden/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    # Use Let's Encrypt for TLS certificates
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Nginx specific annotations
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: vaultwarden
spec:
  ingressClassName: nginx
  tls:
    - secretName: vaultwarden-tls
      hosts:
      - vaultwarden.vps-2.cluster-4.de
  rules:
  - host: "vaultwarden.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: vaultwarden
              port:
                number: 80
